--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - name: Set up environment
-        run: sudo apt-get install libgtk-3-dev && export PKG_CONFIG_PATH="/usr/lib/pkgconfig:$PKG_CONFIG_PATH"
+        run: sudo apt-get install libgtk-3-dev && export PKG_CONFIG_PATH="/usr/lib/pkgconfig:$PKG_CONFIG_PATH" && curl https://sh.rustup.rs -sSf | sh -s -- -y && source "$HOME/.cargo/env"
 
       - name: Checkout git repo
         uses: actions/checkout@v3
