--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emudeck-install-tauri",
+  "name": "emudeck-installer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
